# swpp-2025-project-team-14

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .env.local  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
backend/app/: main.py
backend/app/common/: authorization.py  errors.py  schemas.py  utilities.py
backend/app/core/: config.py
backend/app/database/: __init__.py  session.py
backend/app/database/alembic/: env.py
backend/app/database/alembic/versions/: 00c99eacfe01_only_one_image_per_journal.py  02c823219282_summary_to_journal_keyword.py  06260a3e554f_merge_heads.py  07ef0ed961d1_add_analysis_table_retry.py  095b9f2858f5_delete_journal_causality.py  291418e89a93_add_new_tables.py  2b230b99aafa_create_question_answer_valuemap_.py  410ec0d27f59_remove_category_ko_en_of_answer.py  480d08425976_update_journal_image.py  507091d6e5c7_deleted_scored_5_6.py  70bd5df1cb72_merge_3_heads.py  844874f13626_remove_categories_from_question.py  a8e4841ed502_create_journal_image_emotion_keyword_.py  ab25a4f806f6_merge_heads.py  ae3935ab297a_merge_heads.py  ae9d1a0343ff_add_analysis_table.py  c8bf0a75ed3a_remove_age_and_add_birthdate_in_user.py  e5217cc70fea_add_date_fields_to_question_table.py  eef61c89a23e_initial_tables_including_journals.py  f28581a95b6c_create_user_blockedtoken_models.py  f413984e984e_add_age_gender_appearance_in_user.py
backend/app/database/api/routes/: answer_router.py  journal_router.py  question_router.py  value_map_router.py
backend/app/database/crud/: answer_crud.py  journal_crud.py
backend/app/database/models/: answer_model.py  conversation_model.py  emotion_event_model.py  emotion_model.py  journal_image_model.py  journal_model.py  keyword_model.py  message_model.py  question_model.py  recommendation_model.py  value_map_model.py  value_score_model.py
backend/app/database/schemas/: answer_schema.py  question_schema.py  value_map_schema.py
backend/app/features/analysis/: di.py  models.py  prompt.py  repository.py  router.py  service.py
backend/app/features/analysis/comprehensive_analysis/: evaluator.py  score.py
backend/app/features/analysis/schemas/: requests.py  responses.py
backend/app/features/answer/: answer_crud.py  answer_model.py  answer_router.py  answer_schema.py  answer_service.py
backend/app/features/auth/: models.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/features/auth/schemas/: requests.py  responses.py
backend/app/features/journal/: errors.py  facade.py  journal_crud.py  journal_model.py  journal_router.py  journal_schema.py  models.py  repository.py  router.py  service.py  strategies.py  webhook.py
backend/app/features/journal/prompt/: image_3d_animation.txt  image_american_comics.txt  image_natural.txt  image_pixel_art.txt  image_watercolor.txt  keyword_prompt.txt
backend/app/features/journal/schemas/: requests.py  responses.py
backend/app/features/question/: question_crud.py  question_model.py  question_schema.py  service.py
backend/app/features/selfaware/: answer_service.py  di.py  models.py  prompt.py  repository.py  router.py  service.py  strategy.py  value_map.py  value_map_service.py
backend/app/features/statistics/: repository.py  router.py  service.py
backend/app/features/user/: errors.py  models.py  repository.py  router.py  service.py
backend/app/features/value_map/: value_map_analyzer.py  value_map_crud.py  value_map_service.py
backend/app/features/value_score/: value_score_model.py
backend/tests/: conftest.py  test_auth_router.py  test_journal.py  test_journal_integration.py  test_journal_repository.py  test_journal_service.py  test_statistics_integration.py  test_statistics_repository.py  test_statistics_service.py  test_user.py  test_user_integration.py  test_user_repository.py
backend/tests/integration/: test_journal_integration.py  test_selfaware_integration.py  test_statistics_integration.py  test_user_integration.py
backend/tests/unit/analysis/: test_evaluator.py  test_repository.py  test_service.py
backend/tests/unit/auth/: test_auth_repository.py  test_auth_service.py
backend/tests/unit/journal/: test_journal_service.py
backend/tests/unit/selfaware/: test_repository.py  test_service.py
backend/tests/unit/statistics/: test_statistics_repository.py
backend/tests/unit/user/: test_user_service.py
(+476 files in other folders)
