[tool.poetry]
name = "MindLog"
version = "0.1.0"
description = "FastAPI backend with MySQL,"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
pymysql = "^1.1.1"
alembic = "^1.14.0"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
bcrypt = "4.0.1"
cryptography = "^44.0.0"
httpx = "^0.28.1"
dotenv = "^0.9.9"
langchain = "^0.3.27"
langchain-openai = "^0.3.35"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"